feat: implement theme toggle functionality with dark/light mode support

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
                 <button onclick="app.loadProject()">Load Project</button>
                 <span id="projectName" class="project-name"></span>
             </div>
+            <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">light</button>
         </header>
 
         <!-- Main Content -->
