feat: add project renaming functionality with UI integration

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
                 <button onclick="app.newProject()">New Project</button>
                 <button onclick="app.saveProject()">Save Project</button>
                 <button onclick="app.loadProject()">Load Project</button>
+                <button onclick="app.renameProject()">Rename Project</button>
                 <span id="projectName" class="project-name"></span>
             </div>
             <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">light</button>
