Add export functionality for PDF and update UI
- Introduced an "Export" button in the header for exporting the current project as a PDF.
- Implemented the exportPdf method to generate a print-friendly HTML representation of the project.
- Added CSS styles for the new export button.
- Enhanced the app.js with helper functions for HTML escaping and printing via an iframe.
- Updated index.html to include the new export button and its functionality.

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
                 <button onclick="app.renameProject()">Rename Project</button>
                 <span id="projectName" class="project-name"></span>
             </div>
+            <button id="exportButton" class="export-button" onclick="app.exportPdf()">Export</button>
             <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">light</button>
         </header>
 
