--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Storyboard Flow</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <div class="container">
         <!-- Header -->
@@ -33,17 +35,60 @@
                 <div id="panelGrid" class="panel-grid"></div>
             </section>
 
-            <!-- Panel Editor -->
-            <section class="panel-editor-section">
-                <h2>Panel Editor</h2>
-                <div id="panelEditor" class="panel-editor">
-                    <p class="placeholder">Select a panel to edit</p>
-                </div>
-            </section>
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Panel Editor -->
+                <section class="panel-editor-section">
+                    <h2>Panel Editor</h2>
+                    <div id="panelEditor" class="panel-editor">
+                        <p class="placeholder">Select a panel to edit</p>
+                    </div>
+                </section>
+
+                <!-- Character Library -->
+                <section class="character-library-section">
+                    <div class="section-header">
+                        <h2>Characters</h2>
+                        <button onclick="Characters.showAddModal()">Add</button>
+                    </div>
+                    <div id="characterList" class="character-list"></div>
+                </section>
+            </div>
         </main>
     </div>
 
+    <!-- Add Character Modal -->
+    <div id="addCharacterModal" class="modal-overlay" style="display: none;">
+        <div class="modal">
+            <div class="modal-header">
+                <h3>Add Character</h3>
+                <button class="close-btn" onclick="Characters.hideAddModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" id="charName" placeholder="Character Name">
+                </div>
+                <div class="form-group">
+                    <label>Description</label>
+                    <textarea id="charDesc" placeholder="Description"></textarea>
+                </div>
+                <div class="form-group">
+                    <label>Reference Image</label>
+                    <input type="file" id="charImageInput" accept="image/*" onchange="handleCharImageSelect(this)">
+                    <div id="charImagePreview" class="image-preview"></div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button onclick="Characters.hideAddModal()">Cancel</button>
+                <button onclick="submitNewCharacter()" class="primary">Save</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/app.js"></script>
+    <script src="js/characters.js"></script>
     <script src="js/panels.js"></script>
 </body>
+
 </html>
